# amortized-mog

./: .gitignore  README.md  amortized_mog.py  inference.py  main.py  modules.py  pyproject.toml  requirements.txt  synthetic_mog.py  trainer.py  utils.py
src/amortized_mixture_of_gaussians/: __init__.py  _amortized_mixture_of_gaussians.py  _reshape_last_dim.py
src/amortized_mixture_of_gaussians/datasets/: __init__.py  _generate_gaussian_mixture.py  _generate_test_sample.py
src/amortized_mixture_of_gaussians/metrics/functional/: __init__.py  _component_difference_score.py  _mean_distance_score.py
src/amortized_mixture_of_gaussians/nn/: __init__.py  _conditional_transformer.py  _induced_set_attention_block.py  _mixture_density_network.py  _multihead_attention_block.py  _multihead_attention_pool.py  _set_attention_block.py  _set_transformer.py
src/amortized_mixture_of_gaussians/nn/functional/: __init__.py  _amortized_mixture_of_gaussians_loss.py  _amortized_mixture_of_gaussians_mask_loss.py  _create_fixed_pos_encoding.py
