[project]
name = "amortized-mixture-of-gaussians"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "wandb>=0.19.1",
]

[project.scripts]
amortized-mixture-of-gaussians = "amortized_mixture_of_gaussians:main"
